more complete profiles, add images

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </div>
 
   <div class="text-white divide">
-    <img src="img/roorace.JPG">
+    <img src="img/ferris_sunset.jpg">
     <div class="quote centered">PREPARE THY SELF</div>
   </div>
 
@@ -83,7 +83,7 @@
           <div class="carousel-item active container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block w-100 slides h-75" src="img/ciria.jpg" >              </div>
+                <img class="d-block slides" src="img/ciria.jpg" >              </div>
               <div class="col-sm slide-text">
                 <h4>Ciria Polanco</h4>
                 <p class="slide-years">2 years</p>
@@ -95,7 +95,7 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block w-100 slides h-75" src="img/katy.jpg" >              </div>
+                <img class="d-block slides" src="img/katy.jpg" >              </div>
               <div class="col-sm slide-text">
                 <div class="col-sm slide-text">
                   <h4>Katy McKeough</h4>
@@ -109,12 +109,11 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block w-100 slides h-75" src="img/kyle_henry.jpeg" >              </div>
+                <img class="d-block slides" src="img/kyle_henry.jpeg" >              </div>
               <div class="col-sm slide-text">
                 <h4>Kyle Henson</h4>
                 <p class="slide-years">6 years</p>
-                <p class="slide-quote">Our fearless leader.</p>
-                <br>
+                <p class="slide-quote">Ate all the meatballs.</p>
                 <h4>Butters</h4>
                 <p class="slide-years">2 years</p>
                 <p class="slide-quote">Is not real.</p>
@@ -125,7 +124,7 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block w-100 slides h-75" src="img/malcolm.jpeg" >              </div>
+                <img class="d-block slides" src="img/malcolm.jpeg" >              </div>
               <div class="col-sm slide-text">
                 <div class="col-sm slide-text">
                   <h4>Malcolm Roediger</h4>
@@ -139,7 +138,7 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block w-100 slides h-75" src="img/moritz.jpg" >              </div>
+                <img class="d-block slides" src="img/moritz.jpg" >              </div>
               <div class="col-sm slide-text">
                 <div class="col-sm slide-text">
                   <h4>Moritz</h4>
@@ -153,7 +152,7 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block w-100 slides h-75" src="img/alexv.jpeg" >              </div>
+                <img class="d-block slides" src="img/alexv.jpeg" >              </div>
               <div class="col-sm slide-text">
                 <div class="col-sm slide-text">
                   <h4>Alex Vogelsang</h4>
@@ -167,7 +166,7 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block w-100 slides h-75" src="img/ben.jpg" >              </div>
+                <img class="d-block slides" src="img/ben.jpg" >              </div>
               <div class="col-sm slide-text">
                 <div class="col-sm slide-text">
                   <h4>Ben Whalen</h4>
@@ -181,7 +180,7 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block w-100 slides h-75" src="img/julia.jpeg" >              </div>
+                <img class="d-block slides" src="img/julia.jpeg" >              </div>
               <div class="col-sm slide-text">
                 <h4>Julia Constantine</h4>
                 <p class="slide-years">4 years</p>
@@ -193,19 +192,17 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block w-100 slides h-75" src="img/michele_mark_conner.jpg" >              </div>
+                <img class="d-block slides" src="img/michele_mark_conner.jpg" >              </div>
               <div class="col-sm slide-text">
                 <h4>Mark Herzog</h4>
                 <p class="slide-years">4 years</p>
                 <p class="slide-quote"></p>
-                <br>
                 <h4>Michele Herzog</h4>
                 <p class="slide-years">2 years</p>
                 <p class="slide-quote"></p>
-                <br>
                 <h4>Corndog</h4>
                 <p class="slide-years">4 years</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">If found call (610)-710-6474</p>
               </div>
             </div>
           </div>
@@ -213,10 +210,263 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block w-100 slides h-75" src="img/claire.jpg" >              </div>
+                <img class="d-block slides" src="img/claire.jpg" >              </div>
               <div class="col-sm slide-text">
                 <h4>Claire Felten</h4>
                 <p class="slide-years">2 years</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Maddy-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/maddy2.jpeg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Maddy Mangan</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote">Roscoe is 100% that bitch.</p>
+              </div>
+            </div>
+          </div>
+          <!--Dan V-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/danv.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Dan Violette</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote">Dungeon master</p>
+              </div>
+            </div>
+          </div>
+          <!--Kevin-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/kevin.jpg" >
+              </div>
+              <div class="col-sm slide-text">
+                <h4>Kevin Burg</h4>
+                <p class="slide-years">3 Years</p>
+                <p class="slide-quote">Beatsaber jedi. DJ in training.</p>
+              </div>
+            </div>
+          </div>
+          <!--Mikahla-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/mikahla.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Mikahla Vicino</h4>
+                <p class="slide-years">3 Years</p>
+                <p class="slide-quote">Can recite all the Crack Commandments.</p>
+              </div>
+            </div>
+          </div>
+          <!--Matt-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/dance.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Matt Burg</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Rachel-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/roorace.JPG" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Rachel Burnett</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Franky-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/franky.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Franky Irwin</h4>
+                <p class="slide-years">2 Years</p>
+                <p class="slide-quote">Who is Don?</p>
+              </div>
+            </div>
+          </div>
+          <!--Meital-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/arch.jpeg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Meital Caplan</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Coraline-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/odesza2.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Coraline Pettine</h4>
+                <p class="slide-years">2 Years</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Adele-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/adele.jpeg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Adele McDonald</h4>
+                <p class="slide-years">2 years</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Salim-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/wall.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Salim Hajjar</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Corey-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/where.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Corey Cook</h4>
+                <p class="slide-years">2 Years</p>
+                <p class="slide-quote">Corey cooks, yum!</p>
+              </div>
+            </div>
+          </div>
+          <!--Tony-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/claire.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Tony Spano</h4>
+                <p class="slide-years">6 Years</p>
+                <p class="slide-quote">Most likely to be lost in the woods.</p>
+              </div>
+            </div>
+          </div>
+          <!--Ian-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/odesza2.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Ian Crowther</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Jason-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/claire.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Jason Yoon</h4>
+                <p class="slide-years">2 Years</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Pavel-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/roorace.JPG" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Pavel Rozman</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Marie-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/dance.jpeg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Marie McLaren</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Reina-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/wall.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Reina Alexandria</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Kellen-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/arch.jpeg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Kellen Edmonson</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote">Knows black magic.</p>
+              </div>
+            </div>
+          </div>
+          <!--Paul-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/claire.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Paul</h4>
+                <p class="slide-years"></p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Kelly-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/piano.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Kelly</h4>
+                <p class="slide-years">Rookie</p>
                 <p class="slide-quote"></p>
               </div>
             </div>
@@ -233,6 +483,7 @@
       </div>
     </div>
 
+    <br>
     <!--Forced Layout Graph-->
     <br>
     <p><b><i>How we made it to Roo.  </b></i> The key friendships that brought us to the farm.
