--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <div class="col-sm slide-text">
                 <h4>Ciria Polanco</h4>
                 <p class="slide-years">2 years</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">The cleanest of them all.</p>
               </div>
             </div>
           </div>
@@ -100,7 +100,7 @@
                 <div class="col-sm slide-text">
                   <h4>Katy McKeough</h4>
                   <p class="slide-years">4 years</p>
-                  <p class="slide-quote"></p>
+                  <p class="slide-quote">Drank a lot of whiskey, and it worked.</p>
                 </div>
               </div>
             </div>
@@ -113,7 +113,7 @@
               <div class="col-sm slide-text">
                 <h4>Kyle Henson</h4>
                 <p class="slide-years">6 years</p>
-                <p class="slide-quote">Ate all the meatballs.</p>
+                <p class="slide-quote">Ate all the ravioli.</p>
                 <h4>Butters</h4>
                 <p class="slide-years">2 years</p>
                 <p class="slide-quote">Is not real.</p>
@@ -129,7 +129,7 @@
                 <div class="col-sm slide-text">
                   <h4>Malcolm Roediger</h4>
                   <p class="slide-years">2 years</p>
-                  <p class="slide-quote"></p>
+                  <p class="slide-quote">Intern by day, fireman stripper by night.</p>
                 </div>
               </div>
             </div>
@@ -143,7 +143,7 @@
                 <div class="col-sm slide-text">
                   <h4>Moritz</h4>
                   <p class="slide-years">2 years</p>
-                  <p class="slide-quote"></p>
+                  <p class="slide-quote">Knows where all the Secret German Techno Raves are.</p>
                 </div>
               </div>
             </div>
@@ -157,7 +157,7 @@
                 <div class="col-sm slide-text">
                   <h4>Alex Vogelsang</h4>
                   <p class="slide-years">2 years</p>
-                  <p class="slide-quote"></p>
+                  <p class="slide-quote">Alex's type is 3 of the 4: Jewish, German-speaking, Musician... shit what's the 4th?</p>
                 </div>
               </div>
             </div>
@@ -171,7 +171,7 @@
                 <div class="col-sm slide-text">
                   <h4>Ben Whalen</h4>
                   <p class="slide-years">4 years</p>
-                  <p class="slide-quote"></p>
+                  <p class="slide-quote">Just tryna get comfortable</p>
                 </div>
               </div>
             </div>
@@ -184,7 +184,7 @@
               <div class="col-sm slide-text">
                 <h4>Julia Constantine</h4>
                 <p class="slide-years">4 years</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">Bringer of the good vibes</p>
               </div>
             </div>
           </div>
@@ -196,13 +196,13 @@
               <div class="col-sm slide-text">
                 <h4>Mark Herzog</h4>
                 <p class="slide-years">4 years</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">As me about Justice.</p>
                 <h4>Michele Herzog</h4>
                 <p class="slide-years">2 years</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">Founding member of Death Cab 4 Booty.</p>
                 <h4>Corndog</h4>
                 <p class="slide-years">4 years</p>
-                <p class="slide-quote">If found call (610)-710-6474</p>
+                <p class="slide-quote">If found call Mark: (610)-717-6201</p>
               </div>
             </div>
           </div>
@@ -214,7 +214,7 @@
               <div class="col-sm slide-text">
                 <h4>Claire Felten</h4>
                 <p class="slide-years">2 years</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">Can stop listening to Jon Bellion anytime she wants</p>
               </div>
             </div>
           </div>
@@ -271,11 +271,11 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block slides" src="img/dance.jpg" >              </div>
+                <img class="d-block slides" src="img/matt.jpg" >              </div>
               <div class="col-sm slide-text">
                 <h4>Matt Burg</h4>
                 <p class="slide-years">Rookie</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">Almost bought a Jimmy Butler jersey.</p>
               </div>
             </div>
           </div>
@@ -283,11 +283,11 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block slides" src="img/roorace.JPG" >              </div>
+                <img class="d-block slides" src="img/rachel.JPG" >              </div>
               <div class="col-sm slide-text">
-                <h4>Rachel Burnett</h4>
+                <h4>Rachel Barnett</h4>
                 <p class="slide-years">Rookie</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">Hey! Have a great day :)</p>
               </div>
             </div>
           </div>
@@ -319,11 +319,11 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block slides" src="img/odesza2.jpg" >              </div>
+                <img class="d-block slides" src="img/coraline.jpg" >              </div>
               <div class="col-sm slide-text">
                 <h4>Coraline Pettine</h4>
                 <p class="slide-years">2 Years</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">Bakes things and headbangs</p>
               </div>
             </div>
           </div>
@@ -335,7 +335,7 @@
               <div class="col-sm slide-text">
                 <h4>Adele McDonald</h4>
                 <p class="slide-years">2 years</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">Is an actual werewolf.</p>
               </div>
             </div>
           </div>
@@ -347,7 +347,7 @@
               <div class="col-sm slide-text">
                 <h4>Salim Hajjar</h4>
                 <p class="slide-years">Rookie</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">Found the cure for Stickittothemanneosis.</p>
               </div>
             </div>
           </div>
@@ -355,7 +355,7 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block slides" src="img/where.jpg" >              </div>
+                <img class="d-block slides" src="img/corey.jpg" >              </div>
               <div class="col-sm slide-text">
                 <h4>Corey Cook</h4>
                 <p class="slide-years">2 Years</p>
@@ -367,10 +367,10 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block slides" src="img/claire.jpg" >              </div>
+                <img class="d-block slides" src="img/tony.jpg" >              </div>
               <div class="col-sm slide-text">
                 <h4>Tony Spano</h4>
-                <p class="slide-years">6 Years</p>
+                <p class="slide-years">4 Years</p>
                 <p class="slide-quote">Most likely to be lost in the woods.</p>
               </div>
             </div>
@@ -391,11 +391,11 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block slides" src="img/claire.jpg" >              </div>
+                <img class="d-block slides" src="img/where.jpg" >              </div>
               <div class="col-sm slide-text">
                 <h4>Jason Yoon</h4>
                 <p class="slide-years">2 Years</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">Inflatable couch enthusiast.</p>
               </div>
             </div>
           </div>
@@ -403,11 +403,11 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block slides" src="img/roorace.JPG" >              </div>
+                <img class="d-block slides" src="img/groop.JPG" >              </div>
               <div class="col-sm slide-text">
                 <h4>Pavel Rozman</h4>
                 <p class="slide-years">Rookie</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">Croo's ambassador to Ireland.</p>
               </div>
             </div>
           </div>
@@ -431,7 +431,7 @@
               <div class="col-sm slide-text">
                 <h4>Reina Alexandria</h4>
                 <p class="slide-years">Rookie</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">Saviour the Ocean.</p>
               </div>
             </div>
           </div>
@@ -443,7 +443,7 @@
               <div class="col-sm slide-text">
                 <h4>Kellen Edmonson</h4>
                 <p class="slide-years">Rookie</p>
-                <p class="slide-quote">Knows black magic.</p>
+                <p class="slide-quote">We don't talk about the meatball incident.</p>
               </div>
             </div>
           </div>
@@ -451,10 +451,10 @@
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block slides" src="img/claire.jpg" >              </div>
+                <img class="d-block slides" src="img/paul.png" >              </div>
               <div class="col-sm slide-text">
-                <h4>Paul</h4>
-                <p class="slide-years"></p>
+                <h4>Paul Innis</h4>
+                <p class="slide-years">Rookie</p>
                 <p class="slide-quote"></p>
               </div>
             </div>
@@ -467,7 +467,7 @@
               <div class="col-sm slide-text">
                 <h4>Kelly</h4>
                 <p class="slide-years">Rookie</p>
-                <p class="slide-quote"></p>
+                <p class="slide-quote">Can’t tell you how it really is. Can only tell you what it feels like.</p>
               </div>
             </div>
           </div>
