new folks and vendor updates

--- a/index.html
+++ b/index.html
@@ -471,6 +471,57 @@
               </div>
             </div>
           </div>
+          <!--Mitch-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/mitch.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Mitch Hamburger</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Culen-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/cullen.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Cullen Flemming MD</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote">Costco is better than disney world.</p>
+              </div>
+            </div>
+          </div>
+          <!--Hayden-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/hayden.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Hayden Walling</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote">Plants are green because the sun is green.</p>
+              </div>
+            </div>
+          </div>
+          <!--Phoebe + Mary-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block slides" src="img/mary_pheobe.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Mary Gronkiewicz</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote">Always has the Tupperware</p>
+                <h4>Phoebe Gennardo</h4>
+                <p class="slide-years">Rookie</p>
+                <p class="slide-quote">John Carter from Mars</p>
+              </div>
+            </div>
+          </div>
         </div>
         <a class="carousel-control-prev" href="#carouselControl" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
